--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
   <title>Portifolio Rafa</title>
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
 </head>
 <header class="header">
   <div class="logo">
